[gd_scene load_steps=15 format=3 uid="uid://ydeqjfjbi7vj"]

[ext_resource type="Theme" uid="uid://dgfwyxdpnd7it" path="res://addons/chicken_scratch/theme/black_font_small.theme" id="1_o0kv4"]
[ext_resource type="Script" path="res://addons/chicken_scratch/editor/EditorDialogueBox.gd" id="2_rjeij"]
[ext_resource type="Texture2D" uid="uid://dhn5w56l72mo8" path="res://addons/chicken_scratch/sprites/dialogue_box.png" id="3_r6l2k"]
[ext_resource type="Texture2D" uid="uid://8f31gva4o6mr" path="res://addons/chicken_scratch/sprites/next_indicator_small.png" id="4_yfrxv"]
[ext_resource type="Script" path="res://addons/chicken_scratch/core/ResponseBox.gd" id="5_md4ox"]
[ext_resource type="PackedScene" uid="uid://djlrv3gq2qk7h" path="res://addons/chicken_scratch/response_label.tscn" id="6_b4xjb"]
[ext_resource type="Texture2D" uid="uid://b1q47f5wqk7q4" path="res://addons/chicken_scratch/sprites/cursor.png" id="7_nyqal"]
[ext_resource type="Texture2D" uid="uid://unurkh78d3hx" path="res://addons/chicken_scratch/sprites/cursor_shadow.png" id="8_ygl4s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0cvq0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b3kqx"]

[sub_resource type="Animation" id="Animation_y5c7r"]
resource_name = "idle"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(0, 1), Vector2(0, 2), Vector2(0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w4wnf"]
_data = {
"idle": SubResource("Animation_y5c7r")
}

[sub_resource type="Animation" id="Animation_ftq5x"]
resource_name = "moving"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Main:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(1, 0), Vector2(2, 0), Vector2(1, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q745f"]
_data = {
"moving": SubResource("Animation_ftq5x")
}

[node name="EditorDialogueBox" type="MarginContainer" node_paths=PackedStringArray("container", "Background", "TextBox", "indicator", "indicator_animator", "response_box")]
top_level = true
custom_minimum_size = Vector2(200, 64)
offset_right = 200.0
offset_bottom = 64.0
theme = ExtResource("1_o0kv4")
script = ExtResource("2_rjeij")
container = NodePath("MainContainer")
Background = NodePath("MainContainer/Background")
TextBox = NodePath("MainContainer/MarginContainer/VBoxContainer/Text")
indicator = NodePath("MainContainer/NextIndicator")
indicator_animator = NodePath("MainContainer/NextIndicator/AnimationPlayer")
response_box = NodePath("ResponseBox")

[node name="MainContainer" type="MarginContainer" parent="."]
texture_filter = 1
custom_minimum_size = Vector2(200, 64)
layout_mode = 2

[node name="Background" type="NinePatchRect" parent="MainContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("3_r6l2k")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="MarginContainer" type="MarginContainer" parent="MainContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/MarginContainer"]
layout_mode = 2

[node name="Text" type="RichTextLabel" parent="MainContainer/MarginContainer/VBoxContainer"]
texture_filter = 1
clip_contents = false
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_0cvq0")
theme_override_styles/normal = SubResource("StyleBoxEmpty_b3kqx")
bbcode_enabled = true
scroll_active = false
scroll_following = true

[node name="NextIndicator" type="Sprite2D" parent="MainContainer"]
visible = false
texture_filter = 1
position = Vector2(256, 90)
texture = ExtResource("4_yfrxv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="MainContainer/NextIndicator"]
libraries = {
"": SubResource("AnimationLibrary_w4wnf")
}

[node name="ResponseBox" type="MarginContainer" parent="." node_paths=PackedStringArray("background", "responses", "cursor")]
visible = false
texture_filter = 1
custom_minimum_size = Vector2(80, 50)
layout_mode = 2
script = ExtResource("5_md4ox")
background = NodePath("Background")
responses = NodePath("MarginContainer/VBoxContainer")
cursor = NodePath("../Cursor")
response_label_scn = ExtResource("6_b4xjb")

[node name="Background" type="NinePatchRect" parent="ResponseBox"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("3_r6l2k")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="MarginContainer" type="MarginContainer" parent="ResponseBox"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="ResponseBox/MarginContainer"]
layout_mode = 2

[node name="Cursor" type="Node2D" parent="."]
visible = false
z_index = 4
texture_filter = 1

[node name="Main" type="Sprite2D" parent="Cursor"]
position = Vector2(2, 0)
texture = ExtResource("7_nyqal")
centered = false

[node name="Shadow" type="Sprite2D" parent="Cursor/Main"]
show_behind_parent = true
texture = ExtResource("8_ygl4s")
centered = false
offset = Vector2(0, 3)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Cursor"]
libraries = {
"": SubResource("AnimationLibrary_q745f")
}
